# ai-security-poc

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/agents/asi01_agent_goal_hijack/: README.md
src/agents/asi01_agent_goal_hijack/exploits/: payloads.py  run_tests.py
src/agents/asi01_agent_goal_hijack/mitigated/: agent.py  goal_monitor.py
src/agents/asi01_agent_goal_hijack/vulnerable/: agent.py
src/agents/asi02_tool_misuse/: README.md
src/agents/asi02_tool_misuse/exploits/: payloads.py  run_tests.py
src/agents/asi02_tool_misuse/mitigated/: agent.py  validators.py
src/agents/asi02_tool_misuse/vulnerable/: agent.py
src/agents/asi03_identity_privilege_abuse/: README.md
src/agents/asi03_identity_privilege_abuse/exploits/: run_tests.py
src/agents/asi03_identity_privilege_abuse/mitigated/: inter_agent_auth.py  token_manager.py
src/agents/asi03_identity_privilege_abuse/vulnerable/: agent.py
src/agents/asi04_supply_chain/: README.md
src/agents/asi04_supply_chain/exploits/: run_tests.py
src/agents/asi04_supply_chain/mitigated/: mcp_scanner.py
src/agents/asi04_supply_chain/vulnerable/: agent.py
src/agents/asi05_unexpected_code_execution/: README.md
src/agents/asi05_unexpected_code_execution/exploits/: payloads.py  run_tests.py
src/agents/asi05_unexpected_code_execution/mitigated/: sandbox.py
src/agents/asi05_unexpected_code_execution/vulnerable/: agent.py
src/agents/asi06_memory_context_poisoning/: README.md
src/agents/asi06_memory_context_poisoning/exploits/: payloads.py  run_tests.py
src/agents/asi06_memory_context_poisoning/mitigated/: memory_store.py
src/agents/asi06_memory_context_poisoning/vulnerable/: agent.py
src/agents/asi07_insecure_interagent_communication/: README.md
src/agents/asi07_insecure_interagent_communication/exploits/: run_tests.py
src/agents/asi07_insecure_interagent_communication/mitigated/: nonce_store.py
src/agents/asi07_insecure_interagent_communication/vulnerable/: agent.py
src/agents/asi08_cascading_failures/: README.md
src/agents/asi08_cascading_failures/exploits/: run_tests.py
src/agents/asi08_cascading_failures/mitigated/: circuit_breaker.py
src/agents/asi08_cascading_failures/vulnerable/: agent.py
src/agents/asi09_human_agent_trust/: README.md
src/agents/asi09_human_agent_trust/exploits/: payloads.py  run_tests.py
src/agents/asi09_human_agent_trust/mitigated/: authority_detector.py
src/agents/asi09_human_agent_trust/vulnerable/: agent.py
src/agents/asi10_rogue_agents/: README.md
src/agents/asi10_rogue_agents/exploits/: run_tests.py
src/agents/asi10_rogue_agents/mitigated/: controls.py
src/agents/asi10_rogue_agents/vulnerable/: agent.py
src/guardrails/: actions.py  guardrails_agent.py
src/guardrails/config/: config.yml  rails.co
src/llm/llm01_prompt_injection/: README.md
src/llm/llm01_prompt_injection/exploits/: direct_payloads.py  indirect_payloads.py  run_tests.py
src/llm/llm02_sensitive_information/: README.md
src/llm/llm03_supply_chain/: README.md
src/llm/llm04_data_model_poisoning/: README.md
src/llm/llm05_improper_output_handling/: README.md
src/llm/llm06_excessive_agency/: README.md
src/llm/llm07_system_prompt_leakage/: README.md
src/llm/llm08_vector_embedding_weaknesses/: README.md
src/llm/llm09_misinformation/: README.md
src/llm/llm10_unbounded_consumption/: README.md
tests/: test_asi05_sandbox.py  test_asi06_memory_store.py  test_asi07_nonce_store.py  test_asi08_circuit_breaker.py  test_asi10_controls.py  test_llm03_verify_model.py  test_llm04_dataset_validator.py
(+54 files in other folders)
