[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-security-poc"
version = "0.1.0"
description = "Hands-on OWASP Top 10 for LLM Applications 2025 and Agentic AI 2026 reference implementation"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "flask>=3.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# ── per-module optional groups ──────────────────────────────────────────────

# LLM01 – Prompt Injection
llm01 = [
    "nemoguardrails>=0.10.0",
    "garak>=0.9",
]

# LLM02 – Sensitive Information Disclosure
llm02 = [
    "nemoguardrails>=0.10.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7",
    # After installing: python -m spacy download en_core_web_lg
]

# LLM03 – Supply Chain Vulnerabilities
llm03 = [
    "pip-audit>=2.7",
    "cyclonedx-bom>=4.0",
    "pip-tools>=7.0",
]

# LLM04 – Data & Model Poisoning
llm04 = [
    "garak>=0.9",
    "cleanlab>=2.6",
    "langkit>=0.0.18",
]

# LLM05 – Improper Output Handling
llm05 = [
    "bleach>=6.1",
    "markupsafe>=2.1",
    # pydantic and flask already in base dependencies
]

# LLM06 – Excessive Agency
llm06 = [
    "agent-governance>=0.1",
]

# LLM07 – System Prompt Leakage
llm07 = [
    "nemoguardrails>=0.10.0",
]

# LLM08 – Vector & Embedding Weaknesses
llm08 = [
    "chromadb>=0.5",
    "langchain>=0.2",
    "langchain-openai>=0.1",
    "numpy>=1.26",
    "scikit-learn>=1.5",
]

# LLM09 – Misinformation
llm09 = [
    "nemoguardrails>=0.10.0",
    "garak>=0.9",
]

# LLM10 – Unbounded Consumption
llm10 = [
    "tiktoken>=0.7",
    "tenacity>=8.2",
    "slowapi>=0.1.9",
    "redis>=5.0",
]

# ASI01 – Agent Goal Hijack
asi01 = [
    "agent-governance>=0.1",
]

# ASI02 – Tool Misuse & Exploitation
asi02 = [
    "agent-governance>=0.1",
    # pydantic already in base dependencies
]

# ASI03 – Identity & Privilege Abuse
asi03 = [
    "PyJWT>=2.8.0",
    "cryptography>=42.0",
]

# ASI04 – Agentic Supply Chain Vulnerabilities
asi04 = [
    "pip-audit>=2.7",
]

# ASI05 – Unexpected Code Execution (RCE)
asi05 = [
    "RestrictedPython>=7.0",
]

# ASI06 – Memory & Context Poisoning
asi06 = [
    "chromadb>=0.5",
]

# ASI07 – Insecure Inter-Agent Communication
asi07 = [
    "cryptography>=42.0",
]

# ASI08 – Cascading Failures
asi08 = [
    "tenacity>=8.2",
    # pydantic already in base dependencies
]

# ASI09 – Human-Agent Trust Exploitation  (no extra deps)
asi09 = []

# ASI10 – Rogue Agents
asi10 = [
    "agent-governance>=0.1",
    "langkit>=0.0.18",
]

# ── convenience groups ───────────────────────────────────────────────────────

# Install all LLM-module extras
llm-all = [
    "ai-security-poc[llm01,llm02,llm03,llm04,llm05,llm06,llm07,llm08,llm09,llm10]",
]

# Install all agentic-module extras
agents-all = [
    "ai-security-poc[asi01,asi02,asi03,asi04,asi05,asi06,asi07,asi08,asi09,asi10]",
]

# Install everything
all = [
    "ai-security-poc[llm-all,agents-all]",
]

# Dev / test tooling
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
timeout = 30
markers = [
    "no_llm: tests that require no OpenAI API key",
    "requires_api_key: tests that call the OpenAI API",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
